# DB_lab1

./: AlbumIndex.ind  Book.h  BooksFIle.cpp  BooksFIle.h  CMakeLists.txt  DataBaseLab1.cpp  DeletedBooks.cpp  DeletedBooks.h  DeletedLibrarys.cpp  DeletedLibrarys.h  Index.cpp  Index.h  Library.h  LibraryFile.cpp  LibraryFile.fl  LibraryFile.h  ShortString.cpp  ShortString.h  indexFile.cpp  indexFile.h
